--- a/8.html
+++ b/8.html
@@ -40,14 +40,14 @@
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
           </li>
           <li class="nav-item has-treeview">
-            <a href="#" class="nav-link"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
+            <a href="#" class="nav-link active"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="8.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
+              <li class="nav-item"><a href="8.html" class="nav-link active"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員評鑑</p></a></li>
             </ul>
           </li>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
+            <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商資料</p></a></li>
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員資料</p></a></li>
