--- a/7.html
+++ b/7.html
@@ -81,8 +81,8 @@
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>關/刪/復卡資料</p></a></li>
             </ul>
           </li>          
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active"><i class="nav-icon fas fa-cogs"></i><p>系統管理<i class="right fas fa-angle-left"></i></p></a>
+          <li class="nav-item has-treeview ">
+            <a href="#" class="nav-link "><i class="nav-icon fas fa-cogs"></i><p>系統管理<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
               <li class="nav-item"><a href="10.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>帳號管理</p></a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>稽核記錄</p></a></li>
