--- a/10.html
+++ b/10.html
@@ -46,22 +46,22 @@
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員評鑑</p></a></li>
             </ul>
           </li>
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview ">
             <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商資料</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員資料</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>專案資料</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>證照資料</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>安全事件資料</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>健康資料</p></a></li>            
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>關/刪/復卡資料</p></a></li>   
+              <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商資料</p></a></li>
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員資料</p></a></li>
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>專案資料</p></a></li>
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>證照資料</p></a></li>
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>安全事件資料</p></a></li>
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>健康資料</p></a></li>            
+              <li class="nav-item"><a href="9.html#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>關/刪/復卡資料</p></a></li>   
             </ul>
           </li>          
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>系統管理<i class="right fas fa-angle-left"></i></p></a>
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active"><i class="nav-icon fas fa-cogs"></i><p>系統管理<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>帳號管理</p></a></li>
+              <li class="nav-item"><a href="#" class="nav-link active"><i class="far fa-circle nav-icon"></i><p>帳號管理</p></a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>稽核記錄</p></a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>參數設定</p></a></li>
             </ul>
